src/main/default/objects/OrderItem/fields/IsDRSProduct__c.field-meta.xml
<CustomField>
    <fullName>IsDRSProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a DRS product?</inlineHelpText>
    <label>Is DRS Product?</label>
    <type>Checkbox</type>
</CustomField>