src/main/default/objects/OrderItem/fields/OrderRecalculationDate__c.field-meta.xml
<CustomField>
    <fullName>OrderRecalculationDate__c</fullName>
    <inlineHelpText>System field used to indicate that an update on the order item was done via the order recalculation widget.</inlineHelpText>
    <label>Order Recalculation Date</label>
    <type>DateTime</type>
</CustomField>