src/main/default/objects/OrderItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <length>20</length>
    <type>Text</type>
</CustomField>