src/main/default/objects/OrderItem/fields/TotalProductWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalProductWeight__c</fullName>
    <formula>ProductWeight__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Product Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>