src/main/default/objects/OrderItem/validationRules/PreventUpdateOfUnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUpdateOfUnitPrice</fullName>
    <active>true</active>
    <description>Prevent users without &quot;Edit of Unit Price on Order Items&quot; permission to edit unit price.</description>
    <errorConditionFormula>ISCHANGED(UnitPrice) &amp;&amp; NOT(ISCHANGED(OrderRecalculationDate__c)) &amp;&amp; NOT( $Permission.EditUnitPriceOnOrderItems)</errorConditionFormula>
    <errorMessage>You don&apos;t have the permission to update the unit price on order products.</errorMessage>
</ValidationRule>