src/main/default/objects/OrderItem/validationRules/PreventUsersAddingItemsToOrderReadyToPic.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUsersAddingItemsToOrderReadyToPic</fullName>
    <active>true</active>
    <description>Only allow certain users to add items to orders that are &apos;Ready to pick&apos;</description>
    <errorConditionFormula>ISPICKVAL(Order.Status, &quot;Picking in Progress&quot;) &amp;&amp;
NOT( $Permission.AllowOrderUpdatesInSpecificStatuses )</errorConditionFormula>
    <errorMessage>User does not have permission to add items to orders in &apos;Picking in Progress&apos; Status</errorMessage>
</ValidationRule>